// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render simple dast /2 with default rules renders the document 1`] = `
Array [
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "This",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "br",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "br",
      },
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "is a",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "br",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "br",
      },
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "title!",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "h1",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "h1",
  },
]
`;

exports[`render simple dast with no links/blocks with custom rules renders the document 1`] = `
Array [
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "That",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "br",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "br",
      },
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "is a",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "br",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "br",
      },
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "title!",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "h2",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "h2",
  },
]
`;

exports[`render simple dast with no links/blocks with default rules renders the document 1`] = `
Array [
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "This",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "br",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "br",
      },
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "is a",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "br",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "br",
      },
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "title!",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "h1",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "h1",
  },
]
`;

exports[`render with links/blocks grouping together non-block nodes renders the document 1`] = `
Array [
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "This is a",
          },
          Node {
            "_getProperty": [Function],
            "_setProperty": [Function],
            "attributes": Array [],
            "childNodes": Array [
              Node {
                "nodeName": "#text",
                "nodeType": 3,
                "parentElement": [Circular],
                "value": "title",
              },
            ],
            "classList": Object {
              "add": [Function],
              "contains": [Function],
              "item": [Function],
              "length": 0,
              "remove": [Function],
              "toString": [Function],
              "toggle": [Function],
            },
            "className": "",
            "dataset": Object {},
            "nodeName": "mark",
            "parentElement": [Circular],
            "style": Style {
              "el": [Circular],
              "styles": Array [],
            },
            "tagName": "mark",
          },
          Node {
            "_getProperty": [Function],
            "_setProperty": [Function],
            "attributes": Array [],
            "childNodes": Array [
              Node {
                "nodeName": "#text",
                "nodeType": 3,
                "parentElement": [Circular],
                "value": "How to code",
              },
            ],
            "classList": Object {
              "add": [Function],
              "contains": [Function],
              "item": [Function],
              "length": 0,
              "remove": [Function],
              "toString": [Function],
              "toggle": [Function],
            },
            "className": "",
            "dataset": Object {},
            "href": "/docs/how-to-code",
            "nodeName": "a",
            "parentElement": [Circular],
            "style": Style {
              "el": [Circular],
              "styles": Array [],
            },
            "tagName": "a",
          },
          Node {
            "_getProperty": [Function],
            "_setProperty": [Function],
            "attributes": Array [],
            "childNodes": Array [
              Node {
                "nodeName": "#text",
                "nodeType": 3,
                "parentElement": [Circular],
                "value": "here!",
              },
            ],
            "classList": Object {
              "add": [Function],
              "contains": [Function],
              "item": [Function],
              "length": 0,
              "remove": [Function],
              "toString": [Function],
              "toggle": [Function],
            },
            "className": "",
            "dataset": Object {},
            "href": "/docs/how-to-code",
            "nodeName": "a",
            "parentElement": [Circular],
            "style": Style {
              "el": [Circular],
              "styles": Array [],
            },
            "tagName": "a",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "h1",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "h1",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "Foo",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "p",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "p",
      },
    ],
    "class": "group",
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "div",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "div",
  },
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "Foo bar.",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "blockquote",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "blockquote",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "Mark Smith",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "figcaption",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "figcaption",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "figure",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "figure",
  },
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "Bar",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "p",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "p",
      },
    ],
    "class": "group",
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "div",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "div",
  },
]
`;

exports[`render with links/blocks skipping rendering of custom nodes renders the document 1`] = `
Array [
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "This is a",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "title",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "mark",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "mark",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "h1",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "h1",
  },
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "Foo",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "p",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "p",
  },
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "Bar",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "p",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "p",
  },
]
`;

exports[`render with links/blocks with default rules renders the document 1`] = `
Array [
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "This is a",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "title",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "mark",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "mark",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "How to code",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "href": "/docs/how-to-code",
        "nodeName": "a",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "a",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "here!",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "href": "/docs/how-to-code",
        "nodeName": "a",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "a",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "h1",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "h1",
  },
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "Foo",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "p",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "p",
  },
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "Foo bar.",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "blockquote",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "blockquote",
      },
      Node {
        "_getProperty": [Function],
        "_setProperty": [Function],
        "attributes": Array [],
        "childNodes": Array [
          Node {
            "nodeName": "#text",
            "nodeType": 3,
            "parentElement": [Circular],
            "value": "Mark Smith",
          },
        ],
        "classList": Object {
          "add": [Function],
          "contains": [Function],
          "item": [Function],
          "length": 0,
          "remove": [Function],
          "toString": [Function],
          "toggle": [Function],
        },
        "className": "",
        "dataset": Object {},
        "nodeName": "figcaption",
        "parentElement": [Circular],
        "style": Style {
          "el": [Circular],
          "styles": Array [],
        },
        "tagName": "figcaption",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "figure",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "figure",
  },
  Node {
    "_getProperty": [Function],
    "_setProperty": [Function],
    "attributes": Array [],
    "childNodes": Array [
      Node {
        "nodeName": "#text",
        "nodeType": 3,
        "parentElement": [Circular],
        "value": "Bar",
      },
    ],
    "classList": Object {
      "add": [Function],
      "contains": [Function],
      "item": [Function],
      "length": 0,
      "remove": [Function],
      "toString": [Function],
      "toggle": [Function],
    },
    "className": "",
    "dataset": Object {},
    "nodeName": "p",
    "style": Style {
      "el": [Circular],
      "styles": Array [],
    },
    "tagName": "p",
  },
]
`;

exports[`render with no value renders null 1`] = `null`;
